[project]
name = "mdcmd"
description = "Execute commands in Markdown files, embed output, generate TOCs"
version = "0.7.4"
readme = "README.md"
authors = [
    { name = "Ryan Williams", email = "ryan@runsascoded.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "utz>=0.21.4",
    "click>=8",
]

[project.optional-dependencies]
test = [
    "pytest",
 ]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["bmdf", "bmdf.cli", "mdcmd", "mdcmd.cli", "toc"]

[project.scripts]
bmd = "bmdf.cli:bmd"
bmdf = "bmdf.cli:bmd_f"
bmdff = "bmdf.cli:bmd_ff"
bmdfff = "bmdf.cli:bmd_fff"
mdcmd = "mdcmd.cli:main"
mktoc = "toc.mktoc:main"
toc = "toc:main"

[project.urls]
"Homepage" = "https://github.com/runsascoded/mdcmd"
"Repository" = "https://github.com/runsascoded/mdcmd.git"
"Bug Tracker" = "https://github.com/runsascoded/mdcmd/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
